--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<img src="{{ '/assets/images/profile_photo.png' | relative_url }}" width="320" height="320" />
+<img src="{{ '/assets/images/ML_meme.jpg' | relative_url }}" width="436" height="320" />
 
 <p />
-<p>This is <a href="http://ezyhdxm.github.io" target="_blank">Hao</a>! I'm documenting my learning notes in this blog.</p>
+<p>Hi, this is <a href="http://ezyhdxm.github.io" target="_blank">Hao</a>! I'm documenting my learning notes and sharing some random things in this blog.</p>
 <p>Send me an email: yh513447952 AT outlook.com if you have questions or find errors :)</p>
